[gd_scene load_steps=48 format=3 uid="uid://bes1ttstk5flj"]

[ext_resource type="Script" uid="uid://dxwe512yeap4o" path="res://Scenes/Enemies/Bosses/Vampire/vampire.gd" id="1_umhrb"]
[ext_resource type="Texture2D" uid="uid://8egku77l87m" path="res://Sprites/animated sprites/Vampire bite.png" id="2_n8m6e"]
[ext_resource type="Texture2D" uid="uid://lnshwxpiw05b" path="res://Sprites/bat.png" id="3_lry1f"]
[ext_resource type="Texture2D" uid="uid://vwcterlms2dh" path="res://Sprites/RPG Maker x3 size/Pallete 2/Vampire.png" id="4_piet5"]
[ext_resource type="Texture2D" uid="uid://deixsilqjxyq8" path="res://Sprites/animated sprites/attack.png" id="5_wh7ff"]
[ext_resource type="PackedScene" uid="uid://udq0r6fp3mgm" path="res://Components/HealthModule.tscn" id="6_sguw3"]
[ext_resource type="Texture2D" uid="uid://dk78hud4k0pnd" path="res://Sprites/animated sprites/FireFang.png" id="7_ly4cv"]
[ext_resource type="PackedScene" uid="uid://djrj4w1nryb2t" path="res://Components/NavComponent.tscn" id="8_cakw2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_07sv4"]
atlas = ExtResource("2_n8m6e")
region = Rect2(0, 0, 190, 191)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhn7i"]
atlas = ExtResource("2_n8m6e")
region = Rect2(190, 0, 190, 191)

[sub_resource type="AtlasTexture" id="AtlasTexture_hc13q"]
atlas = ExtResource("2_n8m6e")
region = Rect2(380, 0, 190, 191)

[sub_resource type="AtlasTexture" id="AtlasTexture_kln4h"]
atlas = ExtResource("2_n8m6e")
region = Rect2(0, 191, 190, 191)

[sub_resource type="AtlasTexture" id="AtlasTexture_qy1at"]
atlas = ExtResource("2_n8m6e")
region = Rect2(190, 191, 190, 191)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8l5y"]
atlas = ExtResource("2_n8m6e")
region = Rect2(380, 191, 190, 191)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmn7f"]
atlas = ExtResource("2_n8m6e")
region = Rect2(0, 382, 190, 191)

[sub_resource type="SpriteFrames" id="SpriteFrames_3epp1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_07sv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhn7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hc13q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kln4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qy1at")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8l5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmn7f")
}],
"loop": false,
"name": &"Bite",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_lry1f")
}],
"loop": true,
"name": &"bat",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_piet5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3epp1"]
size = Vector2(42, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ksgwu"]
size = Vector2(52, 89)

[sub_resource type="CircleShape2D" id="CircleShape2D_x3drn"]
radius = 37.12142

[sub_resource type="AtlasTexture" id="AtlasTexture_ksgwu"]
atlas = ExtResource("5_wh7ff")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_547wv"]
atlas = ExtResource("5_wh7ff")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnl88"]
atlas = ExtResource("5_wh7ff")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rthyc"]
atlas = ExtResource("5_wh7ff")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1j2v"]
atlas = ExtResource("5_wh7ff")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_405hl"]
atlas = ExtResource("5_wh7ff")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d2b1"]
atlas = ExtResource("5_wh7ff")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7bkc"]
atlas = ExtResource("5_wh7ff")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_svmyt"]
atlas = ExtResource("5_wh7ff")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4l1i"]
atlas = ExtResource("5_wh7ff")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oi3k6"]
atlas = ExtResource("5_wh7ff")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2186"]
atlas = ExtResource("5_wh7ff")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3epp1"]
atlas = ExtResource("5_wh7ff")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_07sv4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksgwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_547wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnl88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rthyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1j2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_405hl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d2b1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7bkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svmyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4l1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oi3k6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2186")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3epp1")
}],
"loop": false,
"name": &"default",
"speed": 30.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_x3drn"]
atlas = ExtResource("2_n8m6e")
region = Rect2(288, 432, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvwb6"]
atlas = ExtResource("7_ly4cv")
region = Rect2(0, 0, 249, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_m450y"]
atlas = ExtResource("7_ly4cv")
region = Rect2(249, 0, 249, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_p83vs"]
atlas = ExtResource("7_ly4cv")
region = Rect2(498, 0, 249, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_b630v"]
atlas = ExtResource("7_ly4cv")
region = Rect2(747, 0, 249, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_p560m"]
atlas = ExtResource("7_ly4cv")
region = Rect2(996, 0, 249, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7ein"]
atlas = ExtResource("7_ly4cv")
region = Rect2(1245, 0, 249, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hs2a"]
atlas = ExtResource("7_ly4cv")
region = Rect2(1494, 0, 249, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6r6j"]
atlas = ExtResource("7_ly4cv")
region = Rect2(1743, 0, 249, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7cgd"]
atlas = ExtResource("7_ly4cv")
region = Rect2(1992, 0, 249, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_gy04d"]
atlas = ExtResource("7_ly4cv")
region = Rect2(2241, 0, 249, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ofud"]
atlas = ExtResource("2_n8m6e")
region = Rect2(432, 432, 144, 144)

[sub_resource type="SpriteFrames" id="SpriteFrames_2ofud"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3drn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvwb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m450y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p83vs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b630v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p560m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7ein")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hs2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6r6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7cgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gy04d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ofud")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cakw2"]
radius = 31.0
height = 88.0

[node name="vampire" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_umhrb")

[node name="VampireSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.3, 0.374)
sprite_frames = SubResource("SpriteFrames_3epp1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 2)
shape = SubResource("RectangleShape2D_3epp1")

[node name="HealthModule" parent="." instance=ExtResource("6_sguw3")]
maxHealth = 500.0

[node name="death_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="bat_timer" type="Timer" parent="."]
wait_time = 5.0

[node name="bite_cooldown" type="Timer" parent="."]
wait_time = 10.0

[node name="transform_cooldown" type="Timer" parent="."]
wait_time = 20.0

[node name="pivot" type="Node2D" parent="."]

[node name="AttackHitbox" type="Area2D" parent="pivot"]
position = Vector2(-91, 1)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivot/AttackHitbox"]
position = Vector2(36, 3)
shape = SubResource("RectangleShape2D_ksgwu")

[node name="BiteHitbox" type="Area2D" parent="pivot"]
position = Vector2(42, -3)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivot/BiteHitbox"]
position = Vector2(-96, 6)
shape = SubResource("CircleShape2D_x3drn")

[node name="BasicAttack" type="AnimatedSprite2D" parent="pivot"]
position = Vector2(-62, 2)
scale = Vector2(1.5937501, 2.75)
sprite_frames = SubResource("SpriteFrames_07sv4")

[node name="BiteAttack" type="AnimatedSprite2D" parent="pivot"]
position = Vector2(-54, 4)
sprite_frames = SubResource("SpriteFrames_2ofud")
frame = 11
frame_progress = 1.0

[node name="NavComponent" parent="." instance=ExtResource("8_cakw2")]

[node name="ClickBox" type="Area2D" parent="NavComponent"]
collision_layer = 2
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="NavComponent/ClickBox"]
shape = SubResource("CapsuleShape2D_cakw2")

[connection signal="timeout" from="death_timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="bat_timer" to="." method="_on_bat_timer_timeout"]
[connection signal="timeout" from="bite_cooldown" to="." method="_on_bite_cooldown_timeout"]
[connection signal="timeout" from="transform_cooldown" to="." method="_on_transform_cooldown_timeout"]
[connection signal="computed_velocity" from="NavComponent" to="." method="_on_nav_component_computed_velocity"]
